--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <button class="reset">Start a new canvas.</button>
     <script src="index.js" defer></script>
     <div class="container"></div>
 </body>
